@@ -20,6 +20,7 @@ A release with an intentional breaking changes is marked with:
 == Unreleased
 
 * Changes
+** {issue}676[#676]: Fix new driver creation so that it sidesteps some underlying Firefox race conditions and improves CI test stability. ({person}dgr[@dgr])
 ** {issue}679[#679]: Add `new-window` function that exposes WebDriver's New Window endpoint. ({person}dgr[@dgr])
 
 == v1.1.42 - 2024-09-27 [[v1.1.42]]
